# jax-xtal

./: README.md  predict.py  pyproject.toml
jax_xtal/: __init__.py  data.py  model.py  predictor.py  train_utils.py
tests/: test_predictor.py
